# pursuit

./: .gitignore  CLAUDE.md  README.md  copy-to-bazzite.sh  furscan-tgbot.service  improved_pursuit.py  migrate_to_improved.py  pyproject.toml  requirements_improved.txt  run_conftest.sh  tgbot.py  webserver.py
.github/workflows/: static.yml
sam3_pursuit/: __init__.py  config.py
sam3_pursuit/api/: __init__.py  annotator.py  cli.py  identifier.py  ingestor.py
sam3_pursuit/models/: __init__.py  classifier.py  embedder.py  preprocessor.py  segmentor.py
sam3_pursuit/pipeline/: processor.py
sam3_pursuit/storage/: database.py  mask_storage.py  tracking.py  vector_index.py
sam3_pursuit/tools/: download_barq.py  download_furtrack.py
scripts/: test_segmentation.py
static/: app.js  index.html
static/models/clip-vit-base-patch32/: config.json
static/models/clip-vit-base-patch32/onnx/: text_model_quantized.onnx  vision_model_quantized.onnx
tests/: ground_truth.csv  ground_truth_nfc25.csv  test_embedder_metadata.py  test_identifier.py  test_ingest_timing.py  test_text_search.py
tools/: compare_embedders.py  download_barq.py  download_furtrack.py  embedder_comparison_results.txt  index_nfc25.py  relabel_dataset.py  splitbarq.sh
